# ValMonitor

./: app.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  witch -c major-refactor
android/: settings.gradle
android/app/: build.gradle
ios/: Podfile
ios/ValoTracker/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/ValoTracker.xcodeproj/: project.pbxproj
src/: App.css  App.jsx  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  discord_rpc.rs  errors.rs  http_log.rs  lib.rs  main.rs  riot.rs  state.rs
src-tauri/src/commands/: asset_commands.rs  discord.rs  henrik.rs  henrik_commands.rs  local_commands.rs  mod.rs  pvp_commands.rs  riot.rs  riot_command.rs
src-tauri/src/henrik/: client.rs  endpoints.rs  mod.rs  settings.rs
src-tauri/src/models/: assets.rs  auth.rs  lockfile.rs  mod.rs  presence.rs  pvp.rs
src-tauri/src/riot/: assets.rs  auth.rs  local.rs  mod.rs  presence.rs  pvp.rs  watcher.rs
src-tauri/src/riot_api/: _core.rs  core.rs  mod.rs  notify.rs  response.rs  shared_data.rs
src-tauri/src/riot_api/clients/: asset_client.rs  asset_models.rs  henrik_client.rs  henrik_models.rs  local_client.rs  local_models.rs  mod.rs  pvp_client.rs  pvp_models.rs
src-tauri/src/riot_api/data/: auth_token.rs  mod.rs  user_data.rs
src/Tabs/: HomeTab.jsx  LiveviewTab.jsx  SettingsTab.jsx
src/app/: i18n.ts  providers.tsx  use-discord-rpc.ts
src/stores/: settings-store.ts  ui-store.ts
src/styles/: globals.css
(+30 files in other folders)
