[package]
name = "valotracker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "valotracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features =  ["json", "form", "cookies"] } 
base64 = "0.22.1"
once_cell = "1.21.4"
thiserror = "2"
tracing = "0.1"
urlencoding = "2"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
discord-rich-presence = "1.1.0"
